# advent-of-code-rust

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md
2024/day01/: Cargo.toml  README.md
2024/day01/benches/: naive_vs_hashmap.rs
2024/day01/src/: lib.rs  main.rs
2024/day01/tests/: day01.rs
2024/day02/: Cargo.toml  notes.md
2024/day02/src/: lib.rs  main.rs
2024/day02/tests/: day02.rs
2024/day03/: Cargo.toml
2024/day03/src/: lib.rs  main.rs
2024/day03/tests/: day03.rs
2024/day04/: Cargo.toml  DAY04_OPTIMIZATION_PLAN.md
2024/day04/src/: lib.rs  main.rs
2024/day04/tests/: day04.rs
2024/day05/: Cargo.toml  description.txt
2024/day05/benches/: algorithmic_scaling.rs
2024/day05/src/: lib.rs  main.rs
2024/day05/tests/: day05.rs
2025/day01/: Cargo.toml  description.txt  solution.md
2025/day01/src/: lib.rs  main.rs
2025/day02/: Cargo.toml  solution.md
2025/day02/src/: lib.rs  main.rs
2025/day02/tests/: day02.rs
2025/day03/: Cargo.toml  description.txt  solution.md
2025/day03/src/: lib.rs  main.rs
2025/day03/tests/: day03.rs
2025/day04/: Cargo.toml
2025/day04/src/: lib.rs  main.rs
2025/day05/: Cargo.toml
2025/day05/src/: lib.rs  main.rs
scripts/: new_day.sh
shared/src/: input.rs  plotting.rs
