[package]
name = "y2024-d01"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../../shared" }
anyhow = { workspace = true }
itertools = { workspace = true }
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "naive_vs_hashmap"
harness = false
